fix: exclude v4 apis when fetching apis
We apply the same principle used in ApiService by setting a list of
allowed definition to exclude v4 apis from the search.

https://gravitee.atlassian.net/browse/APIM-1968
https://github.com/gravitee-io/issues/issues/9091
(cherry picked from commit e6bac91293201549329bc8663948165af1ac2c1f)